2016-05-04  Werner Lemberg  <wl@gnu.org>

	[ftinspect] Minor.

	* src/ftinspect.h (Engine): Add destructor.
	(MainGUI): Use point to `engine'.

	* src/ftinspect.cpp (Engine::~Engine): Implement.
	(MainGUI::update): Updated.

2016-05-04  Werner Lemberg  <wl@gnu.org>

	[ftinspect] Better intertwine `Engine' and `MainGUI'.

	* src/ftinspect.cpp (MainGUI::update): New method.
	(main): Use it.

	* src/ftinspect.h (Engine): Make it a friend of `MainGUI'.
	(MainGUI): New member `engine'.
	Updated.

2016-05-04  Werner Lemberg  <wl@gnu.org>

	* src/ftinspect.cpp (MainGUI::loadFonts): Improve logic.

2016-05-04  Werner Lemberg  <wl@gnu.org>

	[ftinspect] Make `previous face' and `next face' button logic work.

	It still does nothing, though.

	* src/ftinspect.h (MainGUI): New slots `checkCurrentFaceIndex',
	`previousFace, and `nextFace'.
	New members `numFaces' and `currentFaceIndex'.

	* src/ftinspect.cpp
	(MainGUI::checkCurrentFaceIndex, MainGUI::previousFace,
	MainGUI::nextFace): New methods.
	(MainGUI::createConnections): Register connections for
	`previousFaceButton' and `nextFaceButton'.
	(MainGUI::setDefaults):	Updated.

2016-05-04  Werner Lemberg  <wl@gnu.org>

	* src/ftinspect.cpp (MainGUI::checkCurrentFontFileIndex): Fix logic.

2016-05-04  Werner Lemberg  <wl@gnu.org>

	[ftinspect] Add buttons for faces.

	* src/ftinspect.cpp (MainGUI::createLayout): New buttons for
	`previous face' and `next face'; they are put into a separate row
	(`fontLayout') together with the buttons for `previous font' and
	`next font'.
	s/fontSizeLayout/sizeLayout/.

	* src/ftinspect.h: Updated.

2016-05-04  Werner Lemberg  <wl@gnu.org>

	[ftinspect] Don't use size in pixels for navigation buttons.

	Instead, derive the width from the displayed text.

	* src/ftinspect.h (QPushButtonx): New class, derived from
	`QPushButton'.

	* src/ftinspect.cpp (QPushButtonx::QPushButtonx): New constructor.
	(MainGUI::createLayout): Use `QPushButtonx' for navigation buttons.
